<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginRight="1dp"
    android:background="#160147"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textColor="@color/colorWait"
            android:autofillHints="no"
            tools:targetApi="o"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorWait"
            android:text="@string/password"
            android:autofillHints="no"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/login"
            android:layout_marginLeft="70dp" />



    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/my_game1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/Register"
            android:layout_marginLeft="70dp" />
    </LinearLayout>

</RelativeLayout>